Closed Bug 365003 Opened 18 years ago Closed 18 years ago

Crash [@ DocumentViewerImpl::SetBounds] with testcase that sets print preview while iframe window resizes

Categories

(Core :: Printing: Output, defect)

x86
All
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: crash, regression, testcase)

Crash Data

Attachments

(3 files, 1 obsolete file)

See upcoming testcase, which crashes within 1 second. The testcase uses enhanced privileges, so you need to load it from your local computer to get the crash. This regressed between 2006-12-09 and 2006-12-10: http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-12-09+03&maxdate=2006-12-10+06&cvsroot=%2Fcvsroot The only relevant patch in that range seems to be from bug 361844. Talkback ID: TB27739268M DocumentViewerImpl::SetBounds [mozilla\layout\base\nsdocumentviewer.cpp, line 1877] nsSubDocumentFrame::Reflow [mozilla\layout\generic\nsframeframe.cpp, line 455] nsLineLayout::ReflowFrame [mozilla\layout\generic\nslinelayout.cpp, line 818]
Attached file testcase (obsolete) —
Attached file testcase
Attachment #249654 - Attachment is obsolete: true
Attached file stack
Attached patch Patch rev. 1Splinter Review
The crash occurs when we access nsPrintEngine data while it's still being created (mIsCreatingPrintPreview = 1, see stack) such as SetBounds does in this case. I considered making DocumentViewerImpl::GetIsPrintPreview() check this flag and return false if it was set, but I don't think that would be right for most of the calls to GetIsPrintPreview(). So I added checks only where I think they are needed.
Attachment #249699 - Flags: review?(sharparrow1)
Comment on attachment 249699 [details] [diff] [review] Patch rev. 1 Looks good to me.
Attachment #249699 - Flags: review?(sharparrow1) → review+
Assignee: printing → mats.palmgren
Attachment #249699 - Flags: superreview?(roc)
Attachment #249699 - Flags: superreview?(roc) → superreview+
Checked in to trunk at 2007-01-01 02:53 PST -> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
OS: Windows XP → All
Resolution: --- → FIXED
Verified fixed, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070103 Minefield/3.0a2pre
Status: RESOLVED → VERIFIED
Flags: in-testsuite?
Crash Signature: [@ DocumentViewerImpl::SetBounds]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: