Print Preview crash when accessing print engine data before it's fully created. b=365003 r=sharparrow1 sr=roc